--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100;200;300;400;500;600&display=swap');
+
 :root {
   --darkPurple: #2a1067;
   --background-color: #0f1923;
@@ -13,93 +15,21 @@
 * {
   background-color: var(--glacierWhite);
   box-sizing: border-box;
+  font-family: 'Chivo Mono', monospace;
 }
 
+/* body{
+  display: flex;
+} */
+
 .bayangan{
-  box-shadow: 25px 20px; 
+  box-shadow: 25px 20px #030723; 
 }
 
 .bayangan_field{
-  box-shadow: 4px 3px; 
+  box-shadow: 4px 3px #030723; 
 }
 
-// button
-button {
-  all: unset;
-  position: relative;
-  cursor: pointer;
-}
-
-button::after {
-  content: '';
-  position: absolute;
-  left: -11px;
-  top: -10px;
-  width: calc(100% + 20px);
-  height: calc(50% + 5px);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-button::before {
-  content: '';
-  position: absolute;
-  left: -11px;
-  bottom: -10px;
-  width: calc(100% + 20px);
-  height: calc(50% + 5px);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-button div {
-  position: relative;
-  display: inline-block;
-  overflow: hidden;
-  width: auto;
-  height: auto;
-  padding: 15px 0;
-  background: #ff4655;
-}
-
-button div::after {
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 5px;
-  height: 5px;
-  background: #0f1923;
-  transition: 0.4s;
-}
-
-button:hover div::after {
-  background: #ece8e1;
-}
-
-button div span {
-  position: absolute;
-  width: 120%;
-  height: 110%;
-  transform: translate(-100%, -20px);
-  background: #0f1923;
-  clip-path: polygon(5% 0, 100% 0, 95% 100%, 0% 100%);
-  transition: 0.4s;
-}
-
-button:hover div span {
-  transform: translate(-10%, -20px);
-}
-
-button div p {
-  position: relative;
-  text-decoration: none;
-  color: #ffffff;
-  font-family: sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 20px 80px;
+button:hover {
+  box-shadow: 4px 3px #030723; 
 }
