--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100;200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100;200;300;400;500;600&display=swap");
 
 :root {
   --darkPurple: #2a1067;
@@ -15,21 +15,21 @@
 * {
   background-color: var(--glacierWhite);
   box-sizing: border-box;
-  font-family: 'Chivo Mono', monospace;
+  font-family: "Chivo Mono", monospace;
 }
 
 /* body{
   display: flex;
 } */
 
-.bayangan{
-  box-shadow: 25px 20px #030723; 
+.bayangan {
+  box-shadow: 25px 20px #030723;
 }
 
-.bayangan_field{
-  box-shadow: 4px 3px #030723; 
+.bayangan_field {
+  box-shadow: 4px 3px #030723;
 }
 
 button:hover {
-  box-shadow: 4px 3px #030723; 
+  box-shadow: 4px 3px #030723;
 }
