--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,10 +18,6 @@
   font-family: "Chivo Mono", monospace;
 }
 
-/* body{
-  display: flex;
-} */
-
 .bayangan {
   box-shadow: 10px 8px #030723;
 }
@@ -30,8 +26,31 @@
   box-shadow: 4px 3px #030723;
 }
 
-button:hover {
+.btn:hover {
   box-shadow: 4px 3px #030723;
+}
+
+/* navbar */
+.navbar_fixed {
+  @apply fixed z-[999] bg-white bg-opacity-70;
+  backdrop-filter: blur(5px);
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.hamburger_line {
+  @apply w-[30px] h-[2px] my-2 block bg-[#030723];
+}
+
+.hamburger_active > span:nth-child(1) {
+  @apply rotate-45;
+}
+
+.hamburger_active > span:nth-child(2) {
+  @apply scale-0;
+}
+
+.hamburger_active > span:nth-child(3) {
+  @apply -rotate-45;
 }
 
 @media (min-width: 768px) {
