--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+.logo {
+  background-image: url("/logo/logo.png");
+}
