--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,30 @@ body {
 .logo {
   background-image: url("/logo/logo.png");
 }
+
+.modal, .overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay {
+  background: rgba(6,6,6,0.8);
+}
+.modal-content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #111;
+  border: 1px solid #3e3e3e;
+  padding: 14px 28px;
+  border-radius: 5px;
+  max-width: 600px;
+  min-width: 300px;
+}
